// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsersQueries getUser should return nothing if the requested user does not exist 1`] = `undefined`;

exports[`UsersQueries getUser should return the requested user correctly 1`] = `
User {
  "createdAt": 2020-01-01T08:21:59.730Z,
  "createdBy": null,
  "email": "development@icapps.com",
  "firstName": null,
  "id": "c4cb4582-1e97-4e3e-9d49-c744c8c1a229",
  "lastName": null,
  "roles": Array [
    Role {
      "id": "0c1510ab-5dca-41e2-8912-ee165140ae90",
      "name": "Admin",
    },
  ],
  "state": "ACTIVE",
  "updatedAt": 2020-01-01T08:21:59.730Z,
  "updatedBy": null,
}
`;

exports[`UsersQueries getUsers should return a paged list of users: #0 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2020-01-01T10:21:59.730Z,
      "createdBy": "development@icapps.com",
      "email": "user2@propile.com",
      "firstName": "Benno",
      "id": "45c2c554-b06a-4209-aba8-b097cb5f8566",
      "lastName": "Meysmans",
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
        Role {
          "id": "d02a468f-0225-463d-a9a4-8c7d05cbe62c",
          "name": "Support",
        },
      ],
      "state": "ACTIVE",
      "updatedAt": 2020-01-05T08:21:59.730Z,
      "updatedBy": "development@icapps.com",
    },
    User {
      "createdAt": 2020-01-02T09:21:59.730Z,
      "createdBy": "development@icapps.com",
      "email": "user5@propile.com",
      "firstName": null,
      "id": "af965f04-8c7d-4e20-b230-932b0ff3a33f",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-01-02T09:21:59.730Z,
      "updatedBy": "development@icapps.com",
    },
    User {
      "createdAt": 2020-01-02T09:21:59.730Z,
      "createdBy": null,
      "email": "paging1@propile.com",
      "firstName": null,
      "id": "951328c3-ab15-4b58-b759-4695a8eb59ca",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-01-02T09:21:59.730Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-01-02T09:21:59.730Z,
      "createdBy": null,
      "email": "paging2@propile.com",
      "firstName": null,
      "id": "1ca59e34-00ea-42df-b3c7-c36cabb448c2",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-01-02T09:21:59.730Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2019-01-01T08:32:59.730Z,
      "createdBy": "development@icapps.com",
      "email": "user4@propile.com",
      "firstName": null,
      "id": "c356fce8-9f95-4c69-9e71-8f4d74f49b8f",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "ACTIVE",
      "updatedAt": 2020-01-02T08:59:59.730Z,
      "updatedBy": "development@icapps.com",
    },
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "createdBy": "development@icapps.com",
      "email": "user3@propile.com",
      "firstName": "Jens",
      "id": "db5e788c-2642-4c40-a63a-f13675048ddc",
      "lastName": "De Craecker",
      "roles": Array [
        Role {
          "id": "d02a468f-0225-463d-a9a4-8c7d05cbe62c",
          "name": "Support",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-01-01T08:21:59.730Z,
      "updatedBy": "development@icapps.com",
    },
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "createdBy": "development@icapps.com",
      "email": "user1@propile.com",
      "firstName": "Tom",
      "id": "49affd08-f461-4e80-899f-7612e971ff12",
      "lastName": "De Buyser",
      "roles": Array [
        Role {
          "id": "0c1510ab-5dca-41e2-8912-ee165140ae90",
          "name": "Admin",
        },
      ],
      "state": "ACTIVE",
      "updatedAt": 2020-01-01T08:21:59.730Z,
      "updatedBy": "development@icapps.com",
    },
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "createdBy": null,
      "email": "development@icapps.com",
      "firstName": null,
      "id": "c4cb4582-1e97-4e3e-9d49-c744c8c1a229",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "0c1510ab-5dca-41e2-8912-ee165140ae90",
          "name": "Admin",
        },
      ],
      "state": "ACTIVE",
      "updatedAt": 2020-01-01T08:21:59.730Z,
      "updatedBy": null,
    },
  ],
  "meta": Object {
    "count": 8,
    "skip": 0,
    "totalCount": 8,
  },
}
`;

exports[`UsersQueries getUsers should return a paged list of users: #1 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2020-01-02T09:21:59.730Z,
      "createdBy": "development@icapps.com",
      "email": "user5@propile.com",
      "firstName": null,
      "id": "af965f04-8c7d-4e20-b230-932b0ff3a33f",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-01-02T09:21:59.730Z,
      "updatedBy": "development@icapps.com",
    },
    User {
      "createdAt": 2020-01-02T09:21:59.730Z,
      "createdBy": null,
      "email": "paging1@propile.com",
      "firstName": null,
      "id": "951328c3-ab15-4b58-b759-4695a8eb59ca",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-01-02T09:21:59.730Z,
      "updatedBy": null,
    },
  ],
  "meta": Object {
    "count": 2,
    "skip": 2,
    "totalCount": 8,
  },
}
`;

exports[`UsersQueries getUsers should return a paged list of users: #2 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "createdBy": "development@icapps.com",
      "email": "user1@propile.com",
      "firstName": "Tom",
      "id": "49affd08-f461-4e80-899f-7612e971ff12",
      "lastName": "De Buyser",
      "roles": Array [
        Role {
          "id": "0c1510ab-5dca-41e2-8912-ee165140ae90",
          "name": "Admin",
        },
      ],
      "state": "ACTIVE",
      "updatedAt": 2020-01-01T08:21:59.730Z,
      "updatedBy": "development@icapps.com",
    },
  ],
  "meta": Object {
    "count": 1,
    "skip": 0,
    "totalCount": 1,
  },
}
`;

exports[`UsersQueries getUsers should return a paged list of users: #3 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "createdBy": null,
      "email": "development@icapps.com",
      "firstName": null,
      "id": "c4cb4582-1e97-4e3e-9d49-c744c8c1a229",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "0c1510ab-5dca-41e2-8912-ee165140ae90",
          "name": "Admin",
        },
      ],
      "state": "ACTIVE",
      "updatedAt": 2020-01-01T08:21:59.730Z,
      "updatedBy": null,
    },
  ],
  "meta": Object {
    "count": 1,
    "skip": 0,
    "totalCount": 1,
  },
}
`;

exports[`UsersQueries getUsers should return a paged list of users: #4 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "createdBy": "development@icapps.com",
      "email": "user1@propile.com",
      "firstName": "Tom",
      "id": "49affd08-f461-4e80-899f-7612e971ff12",
      "lastName": "De Buyser",
      "roles": Array [
        Role {
          "id": "0c1510ab-5dca-41e2-8912-ee165140ae90",
          "name": "Admin",
        },
      ],
      "state": "ACTIVE",
      "updatedAt": 2020-01-01T08:21:59.730Z,
      "updatedBy": "development@icapps.com",
    },
  ],
  "meta": Object {
    "count": 1,
    "skip": 0,
    "totalCount": 1,
  },
}
`;

exports[`UsersQueries getUsers should return a paged list of users: #5 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2019-01-01T08:32:59.730Z,
      "createdBy": "development@icapps.com",
      "email": "user4@propile.com",
      "firstName": null,
      "id": "c356fce8-9f95-4c69-9e71-8f4d74f49b8f",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "ACTIVE",
      "updatedAt": 2020-01-02T08:59:59.730Z,
      "updatedBy": "development@icapps.com",
    },
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "createdBy": "development@icapps.com",
      "email": "user1@propile.com",
      "firstName": "Tom",
      "id": "49affd08-f461-4e80-899f-7612e971ff12",
      "lastName": "De Buyser",
      "roles": Array [
        Role {
          "id": "0c1510ab-5dca-41e2-8912-ee165140ae90",
          "name": "Admin",
        },
      ],
      "state": "ACTIVE",
      "updatedAt": 2020-01-01T08:21:59.730Z,
      "updatedBy": "development@icapps.com",
    },
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "createdBy": null,
      "email": "development@icapps.com",
      "firstName": null,
      "id": "c4cb4582-1e97-4e3e-9d49-c744c8c1a229",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "0c1510ab-5dca-41e2-8912-ee165140ae90",
          "name": "Admin",
        },
      ],
      "state": "ACTIVE",
      "updatedAt": 2020-01-01T08:21:59.730Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "createdBy": "development@icapps.com",
      "email": "user3@propile.com",
      "firstName": "Jens",
      "id": "db5e788c-2642-4c40-a63a-f13675048ddc",
      "lastName": "De Craecker",
      "roles": Array [
        Role {
          "id": "d02a468f-0225-463d-a9a4-8c7d05cbe62c",
          "name": "Support",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-01-01T08:21:59.730Z,
      "updatedBy": "development@icapps.com",
    },
    User {
      "createdAt": 2020-01-01T10:21:59.730Z,
      "createdBy": "development@icapps.com",
      "email": "user2@propile.com",
      "firstName": "Benno",
      "id": "45c2c554-b06a-4209-aba8-b097cb5f8566",
      "lastName": "Meysmans",
      "roles": Array [
        Role {
          "id": "d02a468f-0225-463d-a9a4-8c7d05cbe62c",
          "name": "Support",
        },
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "ACTIVE",
      "updatedAt": 2020-01-05T08:21:59.730Z,
      "updatedBy": "development@icapps.com",
    },
    User {
      "createdAt": 2020-01-02T09:21:59.730Z,
      "createdBy": null,
      "email": "paging2@propile.com",
      "firstName": null,
      "id": "1ca59e34-00ea-42df-b3c7-c36cabb448c2",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-01-02T09:21:59.730Z,
      "updatedBy": null,
    },
    User {
      "createdAt": 2020-01-02T09:21:59.730Z,
      "createdBy": "development@icapps.com",
      "email": "user5@propile.com",
      "firstName": null,
      "id": "af965f04-8c7d-4e20-b230-932b0ff3a33f",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-01-02T09:21:59.730Z,
      "updatedBy": "development@icapps.com",
    },
    User {
      "createdAt": 2020-01-02T09:21:59.730Z,
      "createdBy": null,
      "email": "paging1@propile.com",
      "firstName": null,
      "id": "951328c3-ab15-4b58-b759-4695a8eb59ca",
      "lastName": null,
      "roles": Array [
        Role {
          "id": "81388934-7613-4f66-a225-a0d246f65e61",
          "name": "Medewerker",
        },
      ],
      "state": "REGISTERING",
      "updatedAt": 2020-01-02T09:21:59.730Z,
      "updatedBy": null,
    },
  ],
  "meta": Object {
    "count": 8,
    "skip": 0,
    "totalCount": 8,
  },
}
`;

exports[`UsersQueries getUsers should return an empty list if no users found 1`] = `
Object {
  "data": Array [],
  "meta": Object {
    "count": 0,
    "skip": 0,
    "totalCount": 0,
  },
}
`;
